--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:css": "npx tailwindcss -i ./src/styles.css -o ./dist/styles.css --watch",
-    "build:ts": "tsc --watch"
+    "build:ts": "tsc --watch",
+    "build": "npm run build:css && npm run build:ts"
   },
   "keywords": [],
   "author": "",
